tests/NormalTests/paczka1/small_fuzzy/81233978.err
Error in line 1: inFJaKxt A347 59,6
Error in line 4: V1D A247 74,2
Error in line 8: TjPf0tvod A247 60,8
